--- a/websphere/test-mdb/pom.xml
+++ b/websphere/test-mdb/pom.xml
@@ -4,7 +4,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>org.andy.mdb</groupId>
+	<groupId>org.rh-messaging.artemis.ra.websphere.mdb</groupId>
 	<artifactId>test-mdb</artifactId>
 	<version>1.0.0</version>
 	<packaging>ejb</packaging>
